[gd_scene load_steps=34 format=2]

[ext_resource path="res://Art/Bringer-of-Death-SpritSheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/bringerOfDeath.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Systems/Health.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 18.1831 )

[sub_resource type="Animation" id=2]
resource_name = "attack_1"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23, 24, 25 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.020261 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "_set_attack_1"
}, {
"args": [ 0.0 ],
"method": "_disable_attack_area"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attack1Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.407239, 0.54963 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "cast"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 41, 42, 43, 44, 45, 46, 47 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0264626, 0.5, 0.877217, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ 8.0 ],
"method": "_disable_attack_area"
}, {
"args": [ false ],
"method": "_set_spell_attack"
}, {
"args": [ 10, Vector2( 0, 0 ), 0.0 ],
"method": "_spawn_wave_spell"
}, {
"args": [ 10, Vector2( 45, 0 ), 1.8 ],
"method": "_spawn_wave_spell"
}, {
"args": [  ],
"method": "_reses_spells"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32, 33, 34, 35, 36, 37, 38 ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28 ]
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "attack_1"

[sub_resource type="AnimationNodeTimeScale" id=9]

[sub_resource type="AnimationNodeBlendTree" id=10]
nodes/Animation/node = SubResource( 8 )
nodes/Animation/position = Vector2( 413.667, 401.667 )
nodes/TimeScale/node = SubResource( 9 )
nodes/TimeScale/position = Vector2( 605.667, 233.667 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "cast"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
advance_condition = "is_run"

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
advance_condition = "is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
advance_condition = "is_attack_1"

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
advance_condition = "is_attack_1"

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2
advance_condition = "is_run"

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2
advance_condition = "is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
advance_condition = "is_spell_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
advance_condition = "is_spell_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2
advance_condition = "is_run"

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2
advance_condition = "is_idle"

[sub_resource type="AnimationNodeStateMachine" id=25]
states/attack_1/node = SubResource( 10 )
states/attack_1/position = Vector2( 383, 463 )
states/cast/node = SubResource( 11 )
states/cast/position = Vector2( 673.667, 463 )
states/hurt/node = SubResource( 12 )
states/hurt/position = Vector2( 457.667, 87 )
states/idle/node = SubResource( 13 )
states/idle/position = Vector2( 241.667, 265.667 )
states/run/node = SubResource( 14 )
states/run/position = Vector2( 668.333, 265.667 )
transitions = [ "idle", "run", SubResource( 15 ), "run", "idle", SubResource( 16 ), "idle", "attack_1", SubResource( 17 ), "run", "attack_1", SubResource( 18 ), "attack_1", "run", SubResource( 19 ), "attack_1", "idle", SubResource( 20 ), "idle", "cast", SubResource( 21 ), "run", "cast", SubResource( 22 ), "cast", "run", SubResource( 23 ), "cast", "idle", SubResource( 24 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=26]

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 186.502, 43.8261 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 73.7275, 67.4689 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 14.8095, 26.8292 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 42.1522, 25.1335 )

[node name="bringerOfDeath" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -37.755, -47.194 )
texture = ExtResource( 1 )
hframes = 8
vframes = 8
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.41422, -20.5382 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_1 = SubResource( 2 )
anims/cast = SubResource( 3 )
anims/death = SubResource( 4 )
anims/hurt = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/run = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 25 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 26 )
parameters/conditions/is_attack_1 = false
parameters/conditions/is_idle = false
parameters/conditions/is_run = false
parameters/conditions/is_spell_attack = false
parameters/attack_1/TimeScale/scale = 1.0

[node name="detectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea"]
position = Vector2( -3.36739, -28.0616 )
shape = SubResource( 27 )

[node name="dangerArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="dangerArea"]
position = Vector2( 0, -23.9729 )
shape = SubResource( 28 )

[node name="hitBox" type="Area2D" parent="." groups=["bod_hitbox"]]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2( -1.81718, -28.4075 )
shape = SubResource( 29 )

[node name="Health" parent="." instance=ExtResource( 3 )]
max_health = 200

[node name="attack1Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack1Hitbox"]
position = Vector2( -51.8559, -25.893 )
shape = SubResource( 30 )
disabled = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 12.6134, -28.5905 )
enabled = true
cast_to = Vector2( 50, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( -16.8179, -27.7496 )
enabled = true
cast_to = Vector2( -50, 0 )

[connection signal="body_entered" from="detectionArea" to="." method="_on_detectionArea_body_entered"]
[connection signal="body_entered" from="dangerArea" to="." method="_on_dangerArea_body_entered"]
[connection signal="area_entered" from="attack1Hitbox" to="." method="_on_attack1Hitbox_area_entered"]
